<resources>
    <string name="app_name">PurseLegioner</string>
    <string name="current_balance_title">Текущий баланс</string>
    <string name="current_balance_text">0</string>
    <string name="button_balance_plus">Пополнить</string>
    <string name="button_balance_minus">Потратить</string>
    <string name="value_of_change">Введите сумму</string>
    <string name="add_word">-</string>

    <string name="hint_word">Cell...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">row(cell) not saved because it is empty.</string>
</resources>
