<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/currentBalanceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/current_balance_title"
            android:textSize="36sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentBalanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:text="@string/current_balance_text"
            android:textSize="60sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentBalanceTitle" />

        <Button
            android:id="@+id/buttonBalancePlus"
            android:layout_width="180dp"
            android:layout_height="80sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="#F214EF5B"
            android:text="@string/button_balance_plus"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentBalanceText" />

        <Button
            android:id="@+id/buttonBalanceMinus"
            android:layout_width="180dp"
            android:layout_height="80sp"
            android:layout_marginStart="227dp"
            android:layout_marginEnd="10dp"
            android:background="#D3ED0A0A"
            android:text="@string/button_balance_minus"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonBalancePlus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputBalanceChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:hint="@string/value_of_change"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/buttonBalanceMinus"
            app:layout_constraintStart_toStartOf="@+id/buttonBalancePlus"
            app:layout_constraintTop_toBottomOf="@+id/buttonBalancePlus" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_word"
            android:src="@drawable/ic_add_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>